# Cpp-with-Modules

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.ninja  calc.cpp  cmake_install.cmake  foo.cpp  hello  main.cpp
